# ac-worldgen

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
src/: defines.h
src/util/: assert.cpp  blockorientation.cpp  blockorientation.h  blockside.cpp  blockside.h  blockworldpos.h  chunkworldpos.cpp  chunkworldpos.h  iterators.h  matrix.h  randomaccesshashtable.h  tracyutils.h  vector.h
src/woglac/: wglcompiler.cpp  wglcompiler.h
src/woglac/parser/: WoglacLexer.cpp  WoglacLexer.interp  WoglacParser.h
src/woglac/supp/: wglcontext.cpp  wgldeclarationpass.cpp  wglerror.cpp  wglerror.h  wglimplementationpass.cpp  wglimplementationpass.h  wglpass.cpp  wglsymbol.cpp
src/worldgen/base/: worldgenapi.cpp  worldgenapi.h
src/worldgen/base/supp/: wga_biome.h  wga_component.h  wga_componentnode.h  wga_ruleexpansion.h
src/worldgen/cpu/: worldgenapi_cpu.cpp  worldgenapi_cpu.h
src/worldgen/cpu/autogen/: wga_funcs_cpu.cpp
src/worldgen/cpu/funcs/: wga_funcs_cpu.cpp  wga_noisefuncs_cpu.cpp  wga_noisefuncs_cpu.h  wga_samplingfuncs_cpu.cpp  wga_samplingfuncs_cpu.h  wga_structurefuncs_cpu.cpp  wga_structurefuncs_cpu.h  wga_utilityfuncs_cpu.cpp
src/worldgen/cpu/supp/: wga_biomedata_cpu.cpp  wga_biomedata_cpu.h  wga_datacache_cpu.cpp  wga_datacache_cpu.h  wga_datahandle_cpu.h  wga_datarecord_cpu.cpp  wga_datarecord_cpu.h  wga_structuregenerator_cpu.cpp  wga_structuregenerator_cpu.h  wga_structureoutputdata_cpu.h  wga_value_cpu.cpp  wga_value_cpu.h  wga_valuerecs_cpu.h  wga_valuewrapper_cpu.h  worldgen_cpu_utils.h
src/worldgen/util/: voxparser.cpp  voxparser.h
supp/grammar/: Woglac.g4  gen_parser.bat
